manifests/keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
spec:
  podManagementPolicy: Parallel
  serviceName: keycloak
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          imagePullPolicy: IfNotPresent
          args: ["start-dev", --hostname-debug=true]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/jboss/keycloak/standalone/data
      volumes:
        - name: keycloak-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: myfitnessgym.me
      http:
        paths:
        - pathType: Exact
          path: /keycloak
          backend:
            service:
              name: keycloak
              port:
                name: http      
  tls:
    - secretName: tls-keycloak-secret
      hosts:
      - myfitnessgym.me
---
  apiVersion: v1  
  kind: Secret
  metadata:    
    name: keycloak-db-secret
    namespace: keycloak
  data:
    database: a2V5Y2xvYWs=
    password: M0RwMSZNQlo=
    username: cm9vdA==
---
  apiVersion: v1  
  kind: Secret
  metadata:    
    name: keycloak-secrets
    namespace: keycloak    
  data:
    keycloak_admin: YWRtaW4=
    keycloak_pw: YWRtaW4=
